--- a/src/App.css
+++ b/src/App.css
@@ -49,42 +49,46 @@
   padding-left: 15px;
   }
 
-  /* .navbar {
+  .navbar {
     text-decoration: none;
-  } */
+    padding: 10px;
+    display: inline-flex;
+    height: 75px;
+    background-color: rgba(163, 163, 163, 0.527);
+    top: 0;
+    position: sticky;
+    position: fixed!important;
+    z-index: 1000;
+    width: 100%;
+    justify-content: space-around;
+  }
 
-  .navcomponents {
+  .navlink {
     list-style-type: none;
     display: flex;
     justify-content: space-evenly;
     color: white;
     font-weight: 500;
     padding-bottom: 20px;
+    margin: 10px;
+    font-weight: bolder;
   }
 
-  #menu:hover {
-    color: rgb(175, 175, 175);
+  #tilebarnav {
+    font-size: xx-large;
+    font-weight: bolder;
+}
+
+a {
+  text-decoration: none; 
+}
+
+  .navlink:hover {
+    color: ivory;
     font-weight: bolder;
     cursor: pointer;
   }
 
-  #about:hover {
-    color: rgb(175, 175, 175);
-    font-weight: bolder;
-    cursor: pointer;
-  }
-
-  #gallery:hover {
-    color: rgb(175, 175, 175);
-    font-weight: bolder;
-    cursor: pointer;
-  }
-
-  #contact:hover {
-    color: rgb(175, 175, 175);
-    font-weight: bolder;
-    cursor: pointer;
-  }
 
   /* ----------------- */
 
@@ -122,7 +126,9 @@
     -o-background-size: cover;
     background-size: cover;
     height: 1600px;
-    
+    background-repeat: no-repeat;
+    background-size: 75%;
+    background-position: center;
   }
 
 
